# tools

./: .gitignore  README.md  bashrc  foxtools.py  ls_colors_settings.txt
python/: foxtools.py
python/foxtools/: README.md  pyproject.toml  setup.cfg
python/foxtools/src/foxtools/: __init__.py  command_line.py  general.py  math.py  plotting.py  tabular_data.py
r/FoxTools/: DESCRIPTION  NAMESPACE
r/FoxTools/R/: math.R  utilities.R
r/FoxTools/man/: cat_split.Rd  change_plot_size.Rd  convert_sec_to_dhms.Rd  display_palette.Rd  localMaxima.Rd  localMinima.Rd  pretty_print_vector.Rd  set_n_cores.Rd
r/ImportAs/: DESCRIPTION  NAMESPACE
r/ImportAs/R/: import_as.R
r/ImportAs/man/: import_as.Rd
r/SCEUtils/: DESCRIPTION  NAMESPACE
r/SCEUtils/.ipynb_checkpoints/: cell_qc-checkpoint.R  plots-checkpoint.R  sce_utility-checkpoint.R
r/SCEUtils/R/: cell_qc.R  clustering.R  diff_exp.R  dim_red.R  fast_tsne.R  leiden.py  plots.R  utility.R
r/SCEUtils/man/: build_binary_mat.Rd  build_boxplot.Rd  build_categorical_color_palette.Rd  build_cluster_overlaps_df.Rd  build_hierarchical_color_palette.Rd  build_marker_dotplot.Rd  build_marker_expression_slides.Rd  build_stacked_violin_plot.Rd  build_thresholded_cluster_palette.Rd  calc_ari.Rd  calc_cluster_depth_de_vs_all_cells.Rd  calc_n_counts.Rd  calc_n_genes.Rd  cluster_batch_bars.Rd  cluster_infomap.Rd  cluster_leiden.Rd  cluster_louvain.Rd  cluster_walktrap.Rd  combine_de_results.Rd  combine_p.Rd  filter_empty_drops.Rd  generate_dataframe.Rd  hclust_dendro.Rd  metadata_histogram.Rd  pca_elbow_plot.Rd  plot_de_results.Rd  (+14 more)
(+4 files in other folders)
