[metadata]
name = foxtools
version = 0.0.3
author = Nathan Fox
author_email = nchristopherfox@gmail.com
description = Generic package of useful functions for myself.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
